--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         let push = await sw.pushManager.subscribe({
           userVisibleOnly: true,
           applicationServerKey:
-          'BAJw6OLzvPeND1T6ZcU5CmCV8GMq5JxxrSqGwxuFAfVU86HL9xw31f-nCTHuF_8qOtYswbqMYJfKiJlFbEzAC34'
+          "BPazQquhXWBJuKfzo3Tz_h9nhSYnb2A9KRC3LgDrPl4giz-OmLg3SjrlDkc_eoAocW3Ty204LBEq5Z5_5SF79Ik",
         });
         console.log(JSON.stringify(push));
       }
