--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         let push = await sw.pushManager.subscribe({
           userVisibleOnly: true,
           applicationServerKey:
-          "BPazQquhXWBJuKfzo3Tz_h9nhSYnb2A9KRC3LgDrPl4giz-OmLg3SjrlDkc_eoAocW3Ty204LBEq5Z5_5SF79Ik",
+          'BLGT3uloHwB_V6ozWLHJuux87VLnH5mlkgWNNqS1ZMNanGISbJWiMYkxYNopmC5Sv-aWljcSrjflaGpl6PMRTAY'
         });
         console.log(JSON.stringify(push));
       }
